# fm_comfyui_bridge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
Workflow/: MultiPassSampling.json  MultiPassSampling_API.json  MultiPassSampling_I2I.json  MultiPassSampling_I2I_API.json  SDXL_LoRA_Base.json
plan/20260418/: 01_claim.md  02_requirement.md  03_specificaiton.md
src/Workflow/: MultiPassSampling.json  MultiPassSampling_API.json  SDXL_LoRA_Base_API.json
src/fm_comfy_request/: __init__.py  api.py  cli.py  client.py  config_lora_yaml.py  exceptions.py  image_io.py  models.py  transport.py  workflow.py
src/fm_comfyui_bridge/: __init__.py  bridge.py  comfy_api.py  config.py  lora_yaml.py  workflow.py
src/fm_comfyui_bridge/Workflow/: MultiPassSampling_I2I_API.json  SDXL_Base.json  SDXL_Base_API.json  SDXL_HighReso.json  SDXL_HighReso_API.json  SDXL_HighReso_I2I.json  SDXL_HighReso_I2I_API.json
tests/: lora.yaml  test_fm_comfyui_bridge.py
tests/unit/: test_config_lora_yaml.py  test_fm_comfy_request.py
workflow/: ps_render.json  ps_render_api.json  ps_render_lora.json  ps_render_lora_api.json  ps_render_vpred.json  ps_render_vpred_api.json  ps_render_vpred_lora.json  ps_render_vpred_lora_api.json
