[project]
name = "fm-comfyui-bridge"
version = "0.5.1"
description = "ComfyUI access bridge"
readme = "README.md"
authors = [
    { name = "rerofumi", email = "rero2@yuumu.org" }
]
requires-python = ">=3.10"
dependencies = [
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/fm_comfyui_bridge"]
include = [
    "src/Workflow",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

